--- a/config/locales/attributes.ko.yml
+++ b/config/locales/attributes.ko.yml
@@ -6,6 +6,10 @@ ko:
     password: '비밀번호'
     password_confirmation: '비밀번호 확인'
     current_password: '현재 비밀번호'
+    title: '제목'
+    content: '내용'
+    image: '사진'
+    tag_list: '태그'
 
   activemodel:
     attributes:
