--- a/config/locales/attributes.ko.yml
+++ b/config/locales/attributes.ko.yml
@@ -1,11 +1,12 @@
 ko:
   attributes: &attributes
     email: '이메일'
-    nickname: '닉네임'
-    avatar: '프로필 이미지'
     password: '비밀번호'
     password_confirmation: '비밀번호 확인'
     current_password: '현재 비밀번호'
+    remember_me: '자동 로그인'
+    nickname: '닉네임'
+    avatar: '프로필 이미지'
     title: '제목'
     content: '내용'
     image: '사진'
